color button added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 
     <script>
-        document.getElementById('bg-darkblue-button').addEventListener('click', function(){
-            document.body.style.backgroundColor = 'darkblue';
-        })
+        
     </script>
+    <script src="js/comment.js"></script>
 </body>
 </html>
