All most finished

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
         <h1 class="text-left font-bold text-4xl text-blue-600 my-20">This is a beautiful comment box</h1>
     </header>
     <section>
-        <article id="new-comment" class="">
+        <article  class="">
             <!-- comment  -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci, consequuntur alias quas laudantium praesentium sunt maxime illum et ratione assumenda ea at totam itaque inventore aut quia quaerat cum!</p>
+            <div id="comment-container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci, consequuntur alias quas laudantium praesentium sunt maxime illum et ratione assumenda ea at totam itaque inventore aut quia quaerat cum!</p>
             <br>
             <p>Soluta doloremque dolorum quasi rerum excepturi provident ipsa perferendis hic cum tenetur error ex magnam, perspiciatis labore consequatur accusantium voluptates doloribus dignissimos dolorem corrupti? Exercitationem corporis molestiae dicta rem fugiat.</p>
+            </div>
 
             <!-- comment box -->
             <div class="mt-5">
                 <h1 class="font-bold text-xl my-2">Comment please!</h1>
-                <textarea name="" id="comment-box" class="border border-blue-600" cols="100" rows="6"></textarea>
+                <textarea name="" id="new-comment" class="border border-blue-600 p-5" cols="100" rows="6"></textarea>
             </div>
             
 
